--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,26 +1,56 @@
 <section class="contaner">
-    <h2>Olá, gostaria de solicitar um orçamento para o Serviço de Climatização.</h2>
-    <h2><mat-icon>location_on</mat-icon>Endereço: Manaus Centro Rua Dr. Alminio 185</h2>
-    <form [formGroup]="form" action="https://formsubmit.co/ec2c5669157f7f299697ac8d2fae3d76" method="POST" (ngSubmit)="onSubmit()" >
-        <mat-form-field appearance="standard">
-            <mat-label>Name</mat-label>
-            <input matInput maxlength="45" inputmode="tel" placeholder="Name" formControlName="name" #nameInput>
+  <h2>
+    Olá, gostaria de solicitar um orçamento para o Serviço de Climatização.
+  </h2>
+  <h2>
+    <a
+      href="https://goo.gl/maps/x8ix1swXPA2fspg98"
+      target="black"
+      rel="noopener"
+    >
+      <mat-icon>location_on</mat-icon> </a
+    >Endereço: Manaus Centro Rua Dr. Alminio 185
+  </h2>
+  <form
+    [formGroup]="form"
+    action="https://formsubmit.co/oscardelarosa7205@gmail.com"
+    method="POST"
+    (ngSubmit)="onSubmit()"
+  >
+    <mat-form-field appearance="standard">
+      <mat-label>Name</mat-label>
+      <input
+        matInput
+        maxlength="45"
+        inputmode="text"
+        placeholder="Name"
+        formControlName="name"
+        #nameInput
+      />
+    </mat-form-field>
 
-        </mat-form-field>
+    <mat-form-field appearance="legacy">
+      <mat-label>Email:</mat-label>
+      <input
+        matInput
+        type="email"
+        formControlName="email"
+        placeholder="Email"
+      />
+      <mat-icon matSuffix>mail_outline</mat-icon>
+    </mat-form-field>
 
-        <mat-form-field appearance="legacy">
-            <mat-label>Email:</mat-label>
-            <input matInput type="email" formControlName="email" placeholder="Email">
-            <mat-icon matSuffix>mail_outline</mat-icon>
-        </mat-form-field>
+    <mat-form-field appearance="standard">
+      <mat-label>Assunto:</mat-label>
+      <textarea
+        matInput
+        placeholder="Assunto"
+        formControlName="message"
+      ></textarea>
+    </mat-form-field>
 
-        <mat-form-field appearance="standard">
-            <mat-label>Assunto:</mat-label>
-            <textarea matInput placeholder="Assunto" formControlName="message"></textarea>
-        </mat-form-field>
-
-        <div mat-dialog-actions >
-            <button class="btn-secondary"  [disabled]="!form.valid">Enviar</button>
-        </div>
-    </form>
+    <div mat-dialog-actions>
+      <button class="btn-secondary" [disabled]="!form.valid">Enviar</button>
+    </div>
+  </form>
 </section>
