--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;500;600;700;800;900&family=Roboto+Mono:wght@100;200;300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;500;600;700;800;900&family=Roboto+Mono:wght@100;200;300;400;500;600;700&display=swap");
 
-@import url('https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
+@import url("https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
 
 html,
 body {
@@ -13,8 +13,12 @@ html {
   overflow: hidden !important;
 }
 
-.ff-inter { font-family: 'Inter', sans-serif; }
-.ff-roboto-mono { font-family: 'Roboto Mono', monospace; }
+.ff-inter {
+  font-family: "Inter", sans-serif;
+}
+.ff-roboto-mono {
+  font-family: "Roboto Mono", monospace;
+}
 
 h1 {
   position: absolute;
@@ -56,30 +60,40 @@ h2 {
 }
 
 .botao:hover {
-  border: 2px solid #84EEC1;
-  color: #84EEC1;
+  border: 2px solid #84eec1;
+  color: #84eec1;
+}
+
+strong {
+  color: rgb(20, 141, 204);
 }
 
 @media (min-width: 576px) {
   .container {
-      width: 540px;
+    width: 540px;
   }
 }
 @media (min-width: 768px) {
   .container {
-      width: 720px;
+    width: 720px;
   }
 }
 @media (min-width: 992px) {
   .container {
-      width: 960px;
+    width: 960px;
   }
 }
 @media (min-width: 1200px) {
   .container {
-      width: 1140px;
+    width: 1140px;
   }
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
